improve cli codes according to solar tests (critical ones)